--- a/templates/_index.html
+++ b/templates/_index.html
@@ -7,15 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='node_modules/jquery/dist/jquery.min.js') }}"></script>
 
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
+    <link href="{{ url_for('static', filename='node_modules/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
+    <script src="{{ url_for('static', filename='node_modules/bootstrap/dist/js/bootstrap.bundle.min.js') }}"></script>
 
     <script type="text/javascript">
 
@@ -45,7 +41,7 @@
 
             <ul class="nav nav-pills">
                 <li class="nav-item"><a href="?m=1&q={{ q }}&g={{ g }}"
-                                        class="nav-link {% if m == "1" %}active{% endif %}{% if m == "2" %} text-dark{% endif %}">일반
+                                        class="nav-link{% if m == "1" %} active{% endif %}{% if m == "2" %} text-dark{% endif %}">일반
                     모드</a></li>
                 <li class="nav-item"><a href="?m=2&q={{ q }}&g={{ g }}"
                                         class="nav-link{% if m == "2" %} bg-warning text-dark{% endif %}">개발 모드</a></li>
@@ -111,7 +107,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {% for i in range(5) %}
+                    {% for i in range(10) %}
                         <tr>
                             <td>{{ loop.index }}</td>
                             <td>1000</td>
